--- a/turffplay/turffbooking/templates/bookturf.html
+++ b/turffplay/turffbooking/templates/bookturf.html
@@ -1,6 +1,6 @@
 {% extends "navbar.html" %}
 
-{% block content %}
+{% block content }
   <h1>Book Turf: {{ turf.name }}</h1>
   <form method="post">
     {% csrf_token %}
